# slevobot

./: .dockerignore  .gitignore  Dockerfile  README  README.md  bot.py  deploy.sh  docker-compose.yaml  pyproject.toml  requirements.txt  test.py
.github/workflows/: deploy.yml
cogs/: akce.py  dluhy.py  dluhygraph.py  exchangerate_api.py  lockin.py  logger.py  rizky.py  socials.py  sync.py
lib/: scraper.py
tests/: README.md  requirements.txt  test_akce.py  test_rizky.py
