[project]
name = "slevobot"
version = "0.1.0"
description = "Discord bot pro scrapování cen vybraných artiklů"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "babel==2.16.0",
    "beautifulsoup4==4.14.3",
    "discord-py==2.7.1",
    "python-dotenv==1.2.2",
    "requests==2.33.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]
